--- a/ux.html
+++ b/ux.html
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zenloopgmbh.recruitee.com/l/de/o/uxui-designer-fmd'>
+<h5><a href='https://zenloopgmbh.recruitee.com/l/de/o/uxui-designer-fmd'>
       UX/UI Designer (f/m/d) - zenloop GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
@@ -269,11 +269,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698387099-ux-designer-ii'>Renaissance UX Designer II | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698387099-ux-designer-ii'>Renaissance UX Designer II | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MNUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrandungGmbHCoKG/743999698260384-ux-designer-concepter-w-m-d-'>brandung GmbH & Co. KG UX Designer / Concepter (w/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -347,11 +347,11 @@
 <p><span class="badge badge-light">Kenya</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -391,7 +391,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -425,7 +425,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://theorem.applytojob.com/apply/eNIN241nlp/UX-Researcher-Consultant'>UX Researcher (Consultant) - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='http://theorem.applytojob.com/apply/eNIN241nlp/UX-Researcher-Consultant'>UX Researcher (Consultant) - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -465,7 +465,7 @@
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
